# Embedded-Skill-Challenge

24bit_integers/: CMakeLists.txt  ReadMe.md
24bit_integers/include/: converter.h
24bit_integers/src/: converter.c
24bit_integers/test/: test_conversion.c
Linked-Lists/: CMakeLists.txt  README.md
Linked-Lists/include/: linked_lists.h
Linked-Lists/src/: linked_lists.c
Linked-Lists/test/: test_linked_lists.c
